--- a/PetSitter/app/src/main/res/layout/float_add_btn.xml
+++ b/PetSitter/app/src/main/res/layout/float_add_btn.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.katsutoshi.petsitter.MainActivity">
+    tools:context="com.example.katsutoshi.petsitter.activity.MainActivity">
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btnAdd"
         android:layout_width="wrap_content"
