Pet Menu options

--- a/PetSitter/app/src/main/res/layout/app_bar_health.xml
+++ b/PetSitter/app/src/main/res/layout/app_bar_health.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.katsutoshi.petsitter.activity.HomeActivity">
+    android:fitsSystemWindows="true"
+    tools:context="com.example.katsutoshi.petsitter.activity.HealthActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -30,17 +31,10 @@
 
     <ListView
         android:layout_marginTop="60dp"
-        android:id="@+id/listPets"
+        android:id="@+id/healthList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:descendantFocusability="blocksDescendants"/>
 
-    <ProgressBar
-        android:id="@+id/circularProgressBar"
-        style="@style/Widget.AppCompat.ProgressBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:theme="@style/CircularProgress"
-        android:visibility="invisible" />
+
 </android.support.design.widget.CoordinatorLayout>
