--- a/PetSitter/app/src/main/res/layout/activity_pet_menu.xml
+++ b/PetSitter/app/src/main/res/layout/activity_pet_menu.xml
@@ -4,8 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.katsutoshi.petsitter.activity.MainActivity"
-    tools:showIn="@layout/activity_main">
+    android:fitsSystemWindows="true"
+    tools:context="com.example.katsutoshi.petsitter.activity.PetMenuActivity">
+
+    <include
+        android:id="@+id/petToolbar"
+        layout="@layout/app_bar_pet_menu_"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"/>
 
 </android.support.design.widget.CoordinatorLayout>
