--- a/PetSitter/app/src/main/res/layout/content_notification.xml
+++ b/PetSitter/app/src/main/res/layout/content_notification.xml
@@ -5,13 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.katsutoshi.petsitter.activity.HealthActivity"
-    tools:showIn="@layout/activity_health">
+    tools:context="com.example.katsutoshi.petsitter.activity.NotificationActivity"
+    tools:showIn="@layout/activity_notification">
 
-    <ListView
-        android:id="@+id/healthList"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-        android:descendantFocusability="blocksDescendants"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/text_margin"
+        android:text="@string/large_text" />
 
 </android.support.v4.widget.NestedScrollView>
