--- a/PetSitter/app/src/main/res/layout/activity_pet_menu.xml
+++ b/PetSitter/app/src/main/res/layout/activity_pet_menu.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:orientation="vertical"
+android:padding="16dp"
+tools:context="com.example.katsutoshi.petsitter.activity.PetMenuActivity">
+
+<ListView
+    android:id="@+id/listPetMenu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context="com.example.katsutoshi.petsitter.activity.PetMenuActivity">
-
-    <include
-        android:id="@+id/petToolbar"
-        layout="@layout/app_bar_pet_menu_"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"/>
-
-</android.support.design.widget.CoordinatorLayout>
+    android:descendantFocusability="blocksDescendants"/>
+</LinearLayout>
