--- a/PetSitter/app/src/main/res/layout/app_bar_health.xml
+++ b/PetSitter/app/src/main/res/layout/app_bar_health.xml
@@ -30,6 +30,7 @@
         app:srcCompat="@drawable/ic_add" />
 
     <ListView
+        android:padding="16dp"
         android:layout_marginTop="60dp"
         android:id="@+id/healthList"
         android:layout_width="match_parent"
