--- a/PetSitter/app/src/main/res/layout/app_bar_home.xml
+++ b/PetSitter/app/src/main/res/layout/app_bar_home.xml
@@ -29,6 +29,7 @@
         app:srcCompat="@drawable/ic_add" />
 
     <ListView
+        android:padding="16dp"
         android:layout_marginTop="60dp"
         android:id="@+id/listPets"
         android:layout_width="match_parent"
