--- a/PetSitter/app/src/main/res/menu/menu_health.xml
+++ b/PetSitter/app/src/main/res/menu/menu_health.xml
@@ -1,10 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.katsutoshi.petsitter.activity.HealthActivity">
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
+    tools:context="com.example.katsutoshi.petsitter.activity.CRUDHealthActivity">
+    <item android:id="@+id/menu_save"
+        android:title="Save"
+        android:icon="@drawable/ic_action_save"
+        app:showAsAction="always"/>
+
+    <item android:id="@+id/menu_delete"
+        android:title="Delete"
+        android:icon="@drawable/ic_action_delete"
+        app:showAsAction="always"/>
 </menu>
