--- a/PetSitter/app/src/main/res/layout/activity_crudpet.xml
+++ b/PetSitter/app/src/main/res/layout/activity_crudpet.xml
@@ -14,47 +14,47 @@
         android:padding="16dp"/>
 
     <android.support.design.widget.TextInputLayout
-        android:hint="Nome da medicação"
+        android:hint="Nome do Animal"
         android:layout_below="@+id/pageTitle"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:id="@+id/wrapperMedName"
+        android:id="@+id/wrapperPetName"
         android:padding="16dp">
 
         <EditText
-            android:id="@+id/txtMedNameEdit"
+            android:id="@+id/txtPetNameEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:hint="Descrição da medicação"
-        android:layout_below="@+id/wrapperMedName"
+        android:hint="Peso"
+        android:layout_below="@+id/wrapperPetName"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:id="@+id/wrapperMedDesc"
+        android:id="@+id/wrapperPetWeight"
         android:padding="16dp">
 
         <EditText
-            android:id="@+id/txtMedDescEdit"
+            android:id="@+id/txtPetWeightEdit"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="number"/>
 
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:hint="Data de aplicação"
-        android:layout_below="@+id/wrapperMedDesc"
+        android:hint="Data de aniversário"
+        android:layout_below="@+id/wrapperPetWeight"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:id="@+id/wrapperMedDate"
+        android:id="@+id/wrapperPetBirth"
         android:padding="16dp">
 
         <EditText
-            android:id="@+id/txtMedDateEdit"
+            android:id="@+id/txtPetBirthEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-
     </android.support.design.widget.TextInputLayout>
 </RelativeLayout>
