--- a/PetSitter/app/src/main/res/layout/activity_pet_menu.xml
+++ b/PetSitter/app/src/main/res/layout/activity_pet_menu.xml
@@ -4,9 +4,18 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical"
-android:padding="16dp"
+android:paddingLeft="16dp"
+android:paddingRight="16dp"
 tools:context="com.example.katsutoshi.petsitter.activity.PetMenuActivity">
 
+    <TextView
+        android:textColor="@color/colorPrimaryDark"
+        android:id="@+id/pageTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="26sp"
+        android:layout_marginBottom="32dp"/>
 <ListView
     android:id="@+id/listPetMenu"
     android:layout_width="match_parent"
