--- a/PetSitter/app/src/main/res/layout/dialog_new_vacination.xml
+++ b/PetSitter/app/src/main/res/layout/dialog_new_vacination.xml
@@ -9,7 +9,7 @@
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Consulta"
+        android:text="Medicação"
         android:textStyle="bold"
         android:layout_marginTop="5dp"
         android:textSize="25sp" />
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:layout_marginTop="10dp"
-        android:hint="@string/vacina"
+        android:hint="@string/medicamento"
         android:inputType="textPersonName" />
 
     <EditText
@@ -38,7 +38,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:ems="10"
-        android:hint="@string/datadevacinacao"
+        android:hint="@string/datademedicamento"
         android:inputType="datetime|date" />
 
     <Button
@@ -48,5 +48,5 @@
         android:background="@color/colorAccent"
         android:textColor="@android:color/white"
         android:layout_marginTop="10dp"
-        android:text="@string/vacinar" />
+        android:text="@string/medicar" />
 </LinearLayout>
