--- a/PetSitter/app/src/main/res/layout/listview_item.xml
+++ b/PetSitter/app/src/main/res/layout/listview_item.xml
@@ -9,6 +9,7 @@
         android:textStyle="bold"
         android:textSize="30sp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:padding="16dp"/>
 
 </LinearLayout>
