--- a/PetSitter/app/src/main/res/menu/menu_pet.xml
+++ b/PetSitter/app/src/main/res/menu/menu_pet.xml
@@ -1,13 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.katsutoshi.petsitter.activity.MainActivity">
-
-    <item android:id="@+id/menu_add"
-    android:title="Add"
-    android:icon="@drawable/ic_action_new"
-    app:showAsAction="always"/>
-
+    tools:context="com.example.katsutoshi.petsitter.activity.CRUDPetActivity">
     <item android:id="@+id/menu_save"
         android:title="Save"
         android:icon="@drawable/ic_action_save"
@@ -17,5 +11,4 @@
         android:title="Delete"
         android:icon="@drawable/ic_action_delete"
         app:showAsAction="always"/>
-
 </menu>
