--- a/PetSitter/app/src/main/res/menu/activity_home_drawer.xml
+++ b/PetSitter/app/src/main/res/menu/activity_home_drawer.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+    <group android:checkableBehavior="single">
     <item android:title="Animais">
         <menu>
-            <group android:checkableBehavior="single">
                 <item
                     android:id="@+id/nav_dog"
                     android:checkable="true"
@@ -14,7 +14,6 @@
                     android:checkable="true"
                     android:icon="@mipmap/cat"
                     android:title="Gatos" />
-            </group>
         </menu>
     </item>
     <item android:title="Insumos">
@@ -32,6 +31,7 @@
             <item
                 android:id="@+id/nav_others"
                 android:checkable="true"
+                android:icon="@mipmap/other"
                 android:title="Outros"
                 />
         </menu>
@@ -45,4 +45,5 @@
                 android:title="Logout" />
         </menu>
     </item>
+    </group>
 </menu>
