--- a/PetSitter/app/src/main/res/layout/activity_sign_up.xml
+++ b/PetSitter/app/src/main/res/layout/activity_sign_up.xml
@@ -69,4 +69,14 @@
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
+
+    <ProgressBar
+        android:id="@+id/circularProgressBar"
+        android:layout_below="@+id/signUp"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:theme="@style/CircularProgress"
+        android:visibility="invisible" />
 </RelativeLayout>
