--- a/PetSitter/app/src/main/res/layout/dialog_new_other.xml
+++ b/PetSitter/app/src/main/res/layout/dialog_new_other.xml
@@ -9,22 +9,22 @@
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Adicionar alimento"
+        android:text="Adicionar insumo"
         android:textStyle="bold"
         android:layout_marginTop="5dp"
         android:textSize="25sp" />
 
     <EditText
-        android:id="@+id/etFoodName"
+        android:id="@+id/etOtherName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:layout_marginTop="10dp"
-        android:hint="Nome do alimento"
+        android:hint="@string/nome"
         android:inputType="textPersonName" />
 
     <EditText
-        android:id="@+id/etFoodQnt"
+        android:id="@+id/etOtherQnt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -33,7 +33,7 @@
         android:inputType="numberDecimal" />
 
     <EditText
-        android:id="@+id/etFoodDescription"
+        android:id="@+id/etOtherDesc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -42,7 +42,7 @@
         android:inputType="textPersonName" />
 
     <Button
-        android:id="@+id/btnFoodAdd"
+        android:id="@+id/btnOtherAdd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorAccent"
